Bug 1434033 - Use ORIGIN to search for NSS on Linux. r=mhowell,glandium

Set the updater LDFLAGS to -Wl,-rpath=$ORIGIN so NSS can be found in the binary's directory
Stop changing the LD_LIBRARY_PATH in nsUpdaterDriver.cpp
Load the updater support files before the update begins in progressui_gtk.cpp
Launch the updater from the install directory instead of copying it to the update directory
Remove the skip-if = (os == linux && verify) for the staging tests since this also fixes the ETXTBSY error when calling execv on the copied updater

Differential Revision: https://phabricator.services.mozilla.com/D20098

--HG--
extra : moz-landing-system : lando